# clumsy

./: .gitignore  .travis.yml  0.bundle.js  0.bundle.js.map  1.bundle.js  1.bundle.js.map  Cargo.toml  README.md  README.mdown  bundle.js  bundle.js.map  index.html  style.css
cli/: Cargo.toml
cli/src/: main.rs
clumsi/: Cargo.toml
clumsi/src/: main.rs
clumsy/: Cargo.toml
clumsy-web/: .gitignore  clumsy.rs  index.html  main.js  package.json  style.css  webpack.config.js
clumsy-web/src/: lib.rs
clumsy/src/: lib.rs
clumsy/src/parser/: ast.rs  mod.rs  tests.rs
docs/: .gitignore  0.bundle.js  ClumsyWeb.js  bundle.js  index.html  main.js  package.json  style.css  webpack.config.js
libclumsy/: Cargo.toml
src/: ast.rs  cst2ast.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  utils.rs
src/ast/: abstraction.rs  application.rs  mod.rs  program.rs  variable.rs
src/ast/expression/: abstraction.rs  application.rs  mod.rs  (+1 more)
src/cst/: mod.rs  program.rs
src/expression/: abstraction.rs  application.rs  mod.rs  variable.rs
src/interpreter/: abstraction.rs  application.rs  expression.rs  mod.rs  tests.rs  variable.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/parser/: ast.rs  mod.rs  tests.rs
src/translator/: abstraction.rs  application.rs  expression.rs  mod.rs  tests.rs  variable.rs
tests/: factorial.clumsy  fibonacci.clumsy  integration_test.rs
web/: .gitignore  Cargo.toml  index.html  package.json  style.css  webpack.config.js
web/src/: App.js  ClumsyWeb.js  Editor.js  MenuBar.js  Result.js  TitleBar.js  lib.js  lib.rs  main.js
(+10 files in other folders)
